--- a/level_03.html
+++ b/level_03.html
@@ -11,6 +11,101 @@
   <h2>インフラ構成 立て直し・新規構築</h2>
   <a href="index.html">>最初から</a>
 
+  <p>どのインフラ環境を立て直し・新規構築にしますか？</p>
+
+  <div>
+    <label for="environment-type">環境:</label>
+    <select id="environment-type" required="required">
+      <option value="0">新規構築(新しい環境を建てる)</option>
+      <option value="2" selected>develop</option>
+      <option value="3">用途環境-フィーチャ1325対応</option>
+      <option value="4">用途環境-ステークホルダー確認用</option>
+      <option value="5">みうらのお試し</option>
+      <option value="1">staging</option>
+      <option value="99">production</option>
+    </select>
+  </div>
+  <p />
+  <div id="new-environment-area">
+    <div>
+      <label for="environment-name">環境名:</label>
+      <input type="text" id="environment-name" required size="15">
+    </div>
+    <div>
+      <label for="environment-description">環境の説明:</label>
+      <input type="text" id="environment-description" required size="30">
+    </div>
+    <div>
+      <label for="environment-iac-parameters">IaCのパラメータファイル:</label><br>
+      <input type="file" id="environment-iac-parameters">
+    </div>
+    <div>
+      <label for="environment-app-parameters">アプリケーションのパラメータファイル(一式・
+        zip):</label>><br>
+      <input type="file" id="environment-app-parameters">
+    </div>
+  </div>
+  <p />
+  <div>
+    <label for="baseline-version">適用IaC:</label>
+    <select id="baseline-version" required="required">
+      <option value="0" selected>本体-iac-cf-1.0.0.25(現在のdevelop)</option>
+      <option value="1">本体-iac-cf-1.0.0.23</option>
+      <option value="2">本体-iac-cf-1.0.0.22</option>
+      <option value="3">本体-iac-cf-1.0.0.21(現在のstaging)</option>
+      <option value="4">本体-iac-cf-1.0.0.20</option>
+      <option value="5">本体-iac-cf-1.0.0.19</option>
+      <option value="6">本体-iac-cf-1.0.0.18</option>
+      <option value="7">本体-iac-cf-1.0.0.12</option>
+      <option value="8">本体-iac-cf-1.0.0.2</option>
+    </select>
+  </div>
+  <p>
+  <div>
+    <label for="restore-data-version">データ流込(洗い替え):</label>
+    <select id="restore-data-version" required="required">
+      <option value="0">洗い替えしない(データを維持する)</option>
+      <option value="1" selected>production-backup-20221230000000</option>
+      <option value="2" selected>develop-backup-20221230000000</option>
+      <option value="3" selected>staging-backup-20221230000000</option>
+      <option value="4" selected>staging-backup-20221230000000</option>
+      <option value="5" selected>手動取得-負荷テスト時202210</option>
+      <option value="6" selected>production-backup-20221012020000</option>
+    </select>
+  </div>
+  <p />
+  <div>
+    <div id="infra-only-area">
+      <div>
+        <input type="checkbox" id="stop-app" checked>
+        <label for="stop-app">「しばらくお待ち下さい」画面対応</label>
+      </div>
+    </div>
+  </div>
+  <p />
+  <button id="ok" value="1">OK</button><br>
+  <script>
+    const environments = document.getElementById('environment-type');
+    function onChangeEnvironment() {
+      const id = environments.value;
+
+      const area = document.getElementById('new-environment-area');
+      area.style.display = id == 0 ? 'block' : 'none';
+
+      if (id != 99) return;
+      alert('ビジネスに多大な影響が在る可能性があります。\n本当によろしいですか？');
+      const restoreDataVersion = document.getElementById('restore-data-version');
+      restoreDataVersion.value = 0;
+    }
+    environments.onchange = onChangeEnvironment;
+    onChangeEnvironment();
+
+    function okClick() {
+      document.location = 'level_01.html';
+    }
+    document.getElementById('ok').onclick = okClick;
+  </script>
+
 </body>
 
 </html>
