implement: ちっちゃく手直し。

--- a/level_03.html
+++ b/level_03.html
@@ -56,7 +56,7 @@
       <option value="4">本体-iac-cf-1.0.0.20</option>
       <option value="5">本体-iac-cf-1.0.0.19</option>
       <option value="6">本体-iac-cf-1.0.0.18</option>
-      <option value="7">本体-iac-cf-1.0.0.12</option>
+      <option value="7">本体-iac-cf-1.0.0.12(現在のproduction)</option>
       <option value="8">本体-iac-cf-1.0.0.2</option>
     </select>
   </div>
